// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<button
  className="px-4 py-2 bg-blue-600 rounded-lg shadow-lg text-white "
  data-testid="button"
>
  save
</button>
`;

exports[`matches snapshot 2`] = `
<button
  className="px-4 py-2 bg-blue-600 rounded-lg shadow-lg text-white "
  data-testid="button"
>
  click me please
</button>
`;
